--- a/index.html
+++ b/index.html
@@ -100,38 +100,46 @@
 				<h3 class="infoHeader">Siste lånte</h3>
 			</div>
 
-			<a class="filmLink" href="">
+			<a class="filmLink" href="film1.html">
 			<div class="film">
 				<p class="filmTittel">Intouchables</p>
-				<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg">
+				<div class="filmDivPic">
+					<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg">
+				</div>
 			</div>
 			</a>
 
-			<a class="filmLink" href="">
+			<a class="filmLink" href="film2.html">
 			<div class="film">
 				<p class="filmTittel">The Lunchbox</p>
-				<img class="filmPic" src="filmer/Film2/The_Lunchbox_5.jpg">
+				<div class="filmDivPic">
+					<img class="filmPic" src="filmer/Film2/The_Lunchbox_4.jpg">
+				</div>
 			</div>
 			</a>
 
-			<a class="filmLink" href="">
+			<a class="filmLink" href="film3.html">
 			<div class="film">
 				<p class="filmTittel">Vår i Mummidalen</p>
 				<img class="filmPic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg">
 			</div>
 			</a>
 
-			<a class="filmLink" href="">
+			<a class="filmLink" href="film4.html">
 			<div class="film">
 				<p class="filmTittel">Monty Python and the Holy Grail</p>
-				<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg">
+				<div class="filmDivPic">
+					<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg">
+				</div>
 			</div>
 			</a>
 
-			<a class="filmLink" href="">
+			<a class="filmLink" href="film5.html">
 			<div class="film">
-				<p class="filmTittel">Brian De Palma</p>
-				<img class="filmPic" src="filmer/Film5/mi_2.jpg">
+				<p class="filmTittel">Mission: Impossible</p>
+				<div class="filmDivPic">	
+					<img class="filmPic" src="filmer/Film5/mi_2.jpg">
+				</div>
 			</div>
 			</a>
 
@@ -142,38 +150,46 @@
 				<h3 class="infoHeader">Anbefalinger</h3>
 			</div>
 
-			<a class="filmLink" href="">
+			<a class="filmLink" href="film1.html">
 			<div class="film">
 				<p class="filmTittel">Intouchables</p>
-				<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg">
+				<div class="filmDivPic">
+					<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg">
+				</div>
 			</div>
 			</a>
 
-			<a class="filmLink" href="">
+			<a class="filmLink" href="film2.html">
 			<div class="film">
 				<p class="filmTittel">The Lunchbox</p>
-				<img class="filmPic" src="filmer/Film2/The_Lunchbox_5.jpg">
+				<div class="filmDivPic">
+					<img class="filmPic" src="filmer/Film2/The_Lunchbox_4.jpg">
+				</div>
 			</div>
 			</a>
 
-			<a class="filmLink" href="">
+			<a class="filmLink" href="film3.html">
 			<div class="film">
 				<p class="filmTittel">Vår i Mummidalen</p>
 				<img class="filmPic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg">
 			</div>
 			</a>
 
-			<a class="filmLink" href="">
+			<a class="filmLink" href="film4.html">
 			<div class="film">
 				<p class="filmTittel">Monty Python and the Holy Grail</p>
-				<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg">
+				<div class="filmDivPic">
+					<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg">
+				</div>
 			</div>
 			</a>
 
-			<a class="filmLink" href="">
+			<a class="filmLink" href="film5.html">
 			<div class="film">
-				<p class="filmTittel">Brian De Palma</p>
-				<img class="filmPic" src="filmer/Film5/mi_2.jpg">
+				<p class="filmTittel">Mission: Impossible</p>
+				<div class="filmDivPic">	
+					<img class="filmPic" src="filmer/Film5/mi_2.jpg">
+				</div>
 			</div>
 			</a>
 
@@ -183,38 +199,46 @@
 			<div class="info-header-wrap">
 				<h3 class="infoHeader">Rutiner for lån</h3>
 			</div>
-			<a class="filmLink" href="">
+			<a class="filmLink" href="film1.html">
 			<div class="film">
 				<p class="filmTittel">Intouchables</p>
-				<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg">
+				<div class="filmDivPic">
+					<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg">
+				</div>
 			</div>
 			</a>
 
-			<a class="filmLink" href="">
+			<a class="filmLink" href="film2.html">
 			<div class="film">
 				<p class="filmTittel">The Lunchbox</p>
-				<img class="filmPic" src="filmer/Film2/The_Lunchbox_5.jpg">
+				<div class="filmDivPic">
+					<img class="filmPic" src="filmer/Film2/The_Lunchbox_4.jpg">
+				</div>
 			</div>
 			</a>
 
-			<a class="filmLink" href="">
+			<a class="filmLink" href="film3.html">
 			<div class="film">
 				<p class="filmTittel">Vår i Mummidalen</p>
 				<img class="filmPic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg">
 			</div>
 			</a>
 
-			<a class="filmLink" href="">
+			<a class="filmLink" href="film4.html">
 			<div class="film">
 				<p class="filmTittel">Monty Python and the Holy Grail</p>
-				<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg">
+				<div class="filmDivPic">
+					<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg">
+				</div>
 			</div>
 			</a>
 
-			<a class="filmLink" href="">
+			<a class="filmLink" href="film5.html">
 			<div class="film">
-				<p class="filmTittel">Brian De Palma</p>
-				<img class="filmPic" src="filmer/Film5/mi_2.jpg">
+				<p class="filmTittel">Mission: Impossible</p>
+				<div class="filmDivPic">	
+					<img class="filmPic" src="filmer/Film5/mi_2.jpg">
+				</div>
 			</div>
 			</a>
 
