--- a/film1.html
+++ b/film1.html
@@ -13,6 +13,12 @@
 	<script src="https://use.fontawesome.com/db87107c26.js"></script>
 	<script src="./javascript/jquery.js" type="text/javascript"></script>
 	<script src="./javascript/menu.js" type="text/javascript"></script>
+    <script type="text/javascript" src="script/object.js"></script>
+    <script type="text/javascript" src="script/genres.js"></script>
+    <script type="text/javascript" src="script/image.js"></script>
+    <script type="text/javascript" src="script/reviews.js"></script>
+    <script type="text/javascript" src="script/query_params.js"></script>
+    <script type="text/javascript" src="script/show_movie.js"></script>
 </head>
 
 <body>
@@ -44,7 +50,7 @@
 	<main>
 
 		<div class = "filmSideDiv">
-			<h3 class="filmSideTitle">The Intouchables</h3>
+			<h3 id="otitle"></h3>
 
 			
 
@@ -86,9 +92,10 @@
     				
    				</form>
 
-   				<button class="add">
+   				<button class="add" title="Add movie to your list.">
    					+List
    				</button>
+   				
 			</div>
 
 				<p>FAR 2011 (112 minutter)</p>
