--- a/show_movie.html
+++ b/show_movie.html
@@ -4,16 +4,16 @@
   <title>The Intouchables</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Icon made by Chanut is Industries from www.flaticon.com -->
+  <link rel="icon" href="./images/film.png">  
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/film.css">
   <link rel="stylesheet" type="text/css" href="css/menu.css">
-  <link rel="icon" href="./images/film.png">
-  <!-- Icon made by Chanut is Industries from www.flaticon.com -->
 
+  <!-- ALL THE SCRIPTS !!!1! --> 
   <script src="https://use.fontawesome.com/db87107c26.js"></script>
   <script src="./javascript/menu.js" type="text/javascript"></script>
-  <meta charset="utf-8"/>
-
   <script type="text/javascript" src="javascript/object.js"></script>
   <script type="text/javascript" src="javascript/genres.js"></script>
   <script type="text/javascript" src="javascript/image.js"></script>
@@ -22,6 +22,7 @@
   <script type="text/javascript" src="javascript/show_movie.js"></script>
 </head>
 
+<!-- Nice bod, send more -->
 <body>
   <header>
     <nav class="menu">
@@ -106,11 +107,7 @@
         <!-- Summary section -->
         <section>
           <h3>Summary</h3>
-          <p id="summary">Den sanne historien om to menn som aldri skulle ha møtt hverandre - De Urørlige er en oppløftende komedie om vennskap, tillit og menneskelige    muligheter.
-
-          Mangemillionæren Philippe er lam fra nakken og ned etter en paragliderulykke, og må leve resten av livet i rullestol. Han bor i luksuriøse omgivelser i Paris og skal ansette en ny pleieassistent. Den eneste av søkerne som skiller seg ut er Driss - den unge mannen som har levert søknaden kun fordi han må vise at han er aktiv arbeidssøker for å beholde trygdepengene. Snart begynner et usannsynlig kameratskap forankret i ærlighet og humor mellom to individer som på overflaten ikke ville hatt noe til felles.
-
-          De Urørlige er basert på en utrolig, men sann historie. Filmen, som er sett av 20 millioner franskmenn, har blitt et internasjonalt fenomen og er den mest inntjenende ikke-engelskspråklige filmen i historien. (Cover)</p>  
+          <p id="summary"></p>  
         </section>
       </div>
   </section>
