--- a/show_movie.html
+++ b/show_movie.html
@@ -77,7 +77,7 @@
           <!-- rating in format of: x.x / x.x            -->
           <section id="rating_section">
             <h3>Rating</h3>
-            <h4>x</h4>
+            <h4 id="rating"></h4>
             <button id="add_to_list" title="Add movie to your list.">+List</button>  
           </section>
 
