--- a/show_movie.html
+++ b/show_movie.html
@@ -63,7 +63,7 @@
         <div id="movie_image"></div>
         
         <!-- Trailer goes here -->
-        <iframe id="movie_trailer" src="https://www.youtube.com/embed/34WIbmXkewU"></iframe>
+        <div id="movie_trailer"></div>
       </section>
       
 
