--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
 	<title>Infomedia MediaDB</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="./css/menu.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="icon" href="./images/film.png">
 	<!-- Icon made by Chanut is Industries from www.flaticon.com -->
 
 	<script src="https://use.fontawesome.com/db87107c26.js"></script>
 	<script src="./javascript/menu.js" type="text/javascript"></script>
+	<script src="./javascript/image.js" type="text/javascript"></script>
+	<script src="./javascript/my_list.js" type="text/javascript"></script>
+	<script src="./javascript/last_loans.js" type="text/javascript"></script>
+	<script src="./javascript/index.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -41,204 +45,39 @@
 
 	<main>
 		<div class="info-header-wrap">
-			<h3 class="infoHeader">Siste tilgjengeliggjorte<span class="scroll-for-more">Scroll -></span></h3>
-		</div>
-		<div class="info-pane" id="last-available">
-			
-
-			
-			<a class="filmLink" href="film1.html">
-			<div class="film">
-				<p class="filmTittel">Intouchables</p>
-				<div class="filmDivPic">
-					<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg" alt="An image of the Intouchables movie.">
-				</div>
-			</div>
-			</a>
-
-			<a class="filmLink" href="film2.html">
-			<div class="film">
-				<p class="filmTittel">The Lunchbox</p>
-				<div class="filmDivPic">
-					<img class="filmPic" src="filmer/Film2/The_Lunchbox_4.jpg" alt="An image of The lunchbox movie.">
-				</div>
-			</div>
-			</a>
-
-			<a class="filmLink" href="film3.html">
-			<div class="film">
-				<p class="filmTittel">Vår i Mummidalen</p>
-				<img class="filmPic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg" alt="An image of the 'Vår i mummidalen' movie.">
-			</div>
-			</a>
-
-			<a class="filmLink" href="film4.html">
-			<div class="film">
-				<p class="filmTittel">Monty Python and the Holy Grail</p>
-				<div class="filmDivPic">
-					<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg" alt="An image of the Monthy python, the holy grail 2 movie.">
-				</div>
-			</div>
-			</a>
-
-			<a class="filmLink" href="film5.html">
-			<div class="film">
-				<p class="filmTittel">Mission: Impossible</p>
-				<div class="filmDivPic">	
-					<img class="filmPic" src="filmer/Film5/mi_2.jpg" alt="An image of the Mission: Impossible movie.">
-				</div>
-			</div>
-			</a>
-
-		</div>
-
-
-		<div class="info-header-wrap">
 			<h3 class="infoHeader">Siste lånte<span class="scroll-for-more">Scroll -></span></h3>
 		</div>
-		<div class="info-pane" id="lastLoaned">
-			<a class="filmLink" href="film1.html">
-			<div class="film">
-				<p class="filmTittel">Intouchables</p>
-				<div class="filmDivPic">
-					<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg" alt="An image of the Intouchables movie.">
-				</div>
-			</div>
-			</a>
+		<div class="info-pane" id="lastLoaned"></div>
 
-			<a class="filmLink" href="film2.html">
-			<div class="film">
-				<p class="filmTittel">The Lunchbox</p>
-				<div class="filmDivPic">
-					<img class="filmPic" src="filmer/Film2/The_Lunchbox_4.jpg" alt="An image of 'The lunchbox' movie.">
-				</div>
-			</div>
-			</a>
-
-			<a class="filmLink" href="film3.html">
-			<div class="film">
-				<p class="filmTittel">Vår i Mummidalen</p>
-				<img class="filmPic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg" alt="An image of the Vår in mummidalen 2 movie.">
-			</div>
-			</a>
-
-			<a class="filmLink" href="film4.html">
-			<div class="film">
-				<p class="filmTittel">Monty Python and the Holy Grail</p>
-				<div class="filmDivPic">
-					<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg" alt="An image of the monty python, the holy grail movie.">
-				</div>
-			</div>
-			</a>
-
-			<a class="filmLink" href="film5.html">
-			<div class="film">
-				<p class="filmTittel">Mission: Impossible</p>
-				<div class="filmDivPic">	
-					<img class="filmPic" src="filmer/Film5/mi_2.jpg" alt="An image of the Mission: Impossible movie.">
-				</div>
-			</div>
-			</a>
-
-		</div>
 		<div class="info-header-wrap">
-			<h3 class="infoHeader">Anbefalinger<span class="scroll-for-more">Scroll -></span></h3>
+			<h3 class="infoHeader">Min liste<span class="scroll-for-more">Scroll -></span></h3>
 		</div>
-		<div class="info-pane" id="recommended">
-			
+		<div class="info-pane" id="myList"></div>
 
-			<a class="filmLink" href="film1.html">
-			<div class="film">
-				<p class="filmTittel">Intouchables</p>
-				<div class="filmDivPic">
-					<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg" alt="An image of the Intouchables movie.">
-				</div>
-			</div>
-			</a>
 
-			<a class="filmLink" href="film2.html">
-			<div class="film">
-				<p class="filmTittel">The Lunchbox</p>
-				<div class="filmDivPic">
-					<img class="filmPic" src="filmer/Film2/The_Lunchbox_4.jpg" alt="An image of 'The lunchbox' movie.">
-				</div>
-			</div>
-			</a>
-
-			<a class="filmLink" href="film3.html">
-			<div class="film">
-				<p class="filmTittel">Vår i Mummidalen</p>
-				<img class="filmPic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg" alt="An image of the 'Vår i Mummidalen' movie.">
-			</div>
-			</a>
-
-			<a class="filmLink" href="film4.html">
-			<div class="film">
-				<p class="filmTittel">Monty Python and the Holy Grail</p>
-				<div class="filmDivPic">
-					<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg" alt="An image of the monty python, the holy grail movie.">
-				</div>
-			</div>
-			</a>
-
-			<a class="filmLink" href="film5.html">
-			<div class="film">
-				<p class="filmTittel">Mission: Impossible</p>
-				<div class="filmDivPic">	
-					<img class="filmPic" src="filmer/Film5/mi_2.jpg" alt="An image of the Mission: Impossible movie.">
-				</div>
-			</div>
-			</a>
-
-		</div>
+	
 		<div class="info-header-wrap">
 			<h3 class="infoHeader">Rutiner for lån</h3>
 		</div>
-		<div class="info-pane" id="routines">
-			
-			
-			<a class="filmLink" href="film1.html">
-			<div class="film">
-				<p class="filmTittel">Intouchables</p>
-				<div class="filmDivPic">
-					<img class="filmPic" src="filmer/Film1/The_Intouchables_1.jpg" alt="An image of the Intouchables movie.">
-				</div>
-			</div>
-			</a>
-
-			<a class="filmLink" href="film2.html">
-			<div class="film">
-				<p class="filmTittel">The Lunchbox</p>
-				<div class="filmDivPic">
-					<img class="filmPic" src="filmer/Film2/The_Lunchbox_4.jpg" alt="An image of 'The lunchbox' movie.">
-				</div>
-			</div>
-			</a>
-
-			<a class="filmLink" href="film3.html">
-			<div class="film">
-				<p class="filmTittel">Vår i Mummidalen</p>
-				<img class="filmPic" src="filmer/Film3/Vaar_i_mummidalen_2.jpg" alt="An image of the 'Vår i Mummidalen' movie.">
-			</div>
-			</a>
-
-			<a class="filmLink" href="film4.html">
-			<div class="film">
-				<p class="filmTittel">Monty Python and the Holy Grail</p>
-				<div class="filmDivPic">
-					<img class="filmPic" src="filmer/Film4/montypythonandtheholygrail_2.jpg" alt="An image of the monty python, the holy grail movie.">
-				</div>
-			</div>
-			</a>
-
-			<a class="filmLink" href="film5.html">
-			<div class="film">
-				<p class="filmTittel">Mission: Impossible</p>
-				<div class="filmDivPic">	
-					<img class="filmPic" src="filmer/Film5/mi_2.jpg" alt="An image of the Mission: Impossible movie.">
-				</div>
-			</div>
-			</a>
+		<div id="routines">
+			<p>Rutiner</p>
+			<ol>
+				<li>
+					Følgende kan låne: staben ved Institutt for informasjons- og medievitenskap, studenter ved instituttet, på grunnlag av faglig begrunnelse, andre ved UiB etter særlig avtale for et avgrenset tidsrom eller for et avgrenset prosjekt. 
+				</li>
+				<li>
+					Bestillinger vil bli effektuert hver arbeidsdag mellom klokken 14:00 og 15:00. 
+				</li>
+				<li>
+					Ansatte ved instituttet får filmen lagt i posthyllen, studenter og andre får tilbakemelding om hvor og når filmen kan hentes.
+				</li>
+				<li>
+					For alt utlån gjelder en generell regel om lånetid på 1 uke, som kan forlenges med ytterligere en uke. Ønskes en film lånt over en lengre periode må dette begrunnes, og hver enkelt forespørsel vil bli vurdert. 
+				</li>
+				<li>
+					Film skal leveres tilbake i posthyllen merket retur av film.
+				</li>
+			</ol>
 		</div>
 
 
