--- a/search.html
+++ b/search.html
@@ -11,7 +11,7 @@
     <script src="https://use.fontawesome.com/db87107c26.js"></script>
     <script src="./javascript/menu.js" type="text/javascript"></script>
 
-    <script src="./javascript/genres.js"type="text/javascript"></script>
+    <script src="./javascript/genres.js" type="text/javascript"></script>
     <script src="./javascript/object.js" type="text/javascript"></script>
     <script src="./javascript/image.js" type="text/javascript"></script>
     <script src="./javascript/query_params.js" type="text/javascript"></script>
@@ -47,11 +47,7 @@
     </header>
 
     <main>
-        <section id="search-info">
-            <h3>You searched for: <span id="search-input">"Some search input"</span></h3>
-        </section>
-
-            <form id="search" action="search_results.html" method="get">
+        <form id="search" action="search_results.html" method="get">
         <fieldset id="search-box">
             <legend>Søk</legend>
             <table>
@@ -114,6 +110,10 @@
         </div>
         <button id="loadMoreButton" onclick="load_more()">Load more</button>
         <p style="text-align: center;">Showing <span id="shown-images">0</span> of <span class="numberOfResults"></span> results.</p>
+        <div style="display: flex; justify-content: center;">
+            <label for="toggleInfinite">Enable autoload</label>
+            <input type="checkbox" name="toggleInfinite" id="toggleInfinite" value="false">
+        </div>
     </main>
 </body>
 
