--- a/index.html
+++ b/index.html
@@ -48,12 +48,26 @@
 		<div class="info-header-wrap">
 			<h3 class="infoHeader">Siste lånte<span class="scroll-for-more">Scroll -></span></h3>
 		</div>
-		<div class="info-pane" id="lastLoaned"></div>
+		<div class="info-pane">
+			<div class="more-content-right" id="lastLoadnedMore"></div>
+			<div id="lastLoaned" class="inner-info-pane"></div>
+		</div>
 
 		<div class="info-header-wrap">
 			<h3 class="infoHeader">Min liste<span class="scroll-for-more">Scroll -></span></h3>
 		</div>
-		<div class="info-pane" id="myList"></div>
+		<div class="info-pane">
+
+			<div class="more-content-right">
+				<i class="fa fa-arrow-right" aria-hidden="true"></i>
+			</div>
+
+			<div class="more-content-left">
+				<i class="fa fa-arrow-left" aria-hidden="true"></i>
+			</div>
+
+			<div id="myList" class="inner-info-pane"></div>
+		</div>
 
 
 	
