--- a/show_movie.html
+++ b/show_movie.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/film.css">
   <link rel="stylesheet" type="text/css" href="css/menu.css">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
   <!-- ALL THE SCRIPTS !!!1! --> 
   <script src="https://use.fontawesome.com/db87107c26.js"></script>
@@ -20,6 +21,7 @@
   <script type="text/javascript" src="javascript/reviews.js"></script>
   <script type="text/javascript" src="javascript/query_params.js"></script>
   <script type="text/javascript" src="javascript/show_movie.js"></script>
+  <script type="text/javascript" src="javascript/ratings.js"></script>
 </head>
 
 <!-- Nice bod, send more -->
@@ -77,39 +79,62 @@
           <!-- Movie rating and button for 'add to list' -->
           <!-- rating in format of: x.x / x.x            -->
           <section id="rating_section">
-            <h3>Rating</h3>
-            <h4 id="rating"></h4>
-            <button id="add_to_list" title="Add movie to your list.">+List</button>  
-            <a href="review.html">Reviewo</a>
+
+            <!-- stars to hover for ratings, no functionality -->
+            <div id="stars">
+              <span class="star">☆</span>
+              <span class="star">☆</span>
+              <span class="star">☆</span>
+              <span class="star">☆</span>
+              <span class="star">☆</span>
+            </div>
+
+            <!-- Button to write review and button for adding to list. -->
+            <div id="rating_buttons">
+              <form action="review.html">
+                <button class="add_to_list" id="review" href="review.html" title="Write a review">Review</button>
+              </form>
+              <h3 id="rating">2.5/5</h3>
+              <button class="add_to_list" id="addbtn" title="Add movie to your list.">+List</button>
+            </div>
+
           </section>
 
-          <!-- Director(s) -->
-          <div class="info_elements">
-          <h3>Director(s)</h3>
-          <p id="directors"></p>
+          <div id="info">
+
+            <div id="div_data">
+              <!-- List for Country, Year, Length -->
+              <div id="data" class="info_elements">
+                <ul id="CYL_info">
+                  <li class="data_li" title="Country Code" id="country"></li>
+                  <li class="data_li" title="Year produced" id="year"></li>
+                  <li class="data_li" title="Movie length" id="length"></li>
+                </ul>
+              </div>
+
+              <!-- Genres and extras -->
+              <div id="genre_wrapper" class="info_elements">
+                <h3>Genre: </h3>
+                <h3 id="genre"></h3>
+                <p id="extras"></p>
+              </div>
+            </div>
+
+            <div id="cast_wrapper">
+             <!-- Director(s) -->
+             <div class="info_elements">
+               <h3>Director(s)</h3>
+               <p id="directors"></p>
+             </div>
+
+             <!-- Actor(s) -->
+             <div id="cast_container" class="info_elements">
+               <h3>Cast</h3>
+               <p id="cast"></p>
+             </div>
+            </div>
           </div>
 
-          <!-- Actor(s) -->
-          <div class="info_elements">
-          <h3>Cast</h3>
-          <p id="cast"></p>
-          </div>
-
-          <!-- List for Country, Year, Length -->
-          <div class="info_elements">
-          <ul id="CYL_info">
-            <li title="Country Code" id="country"></li>
-            <li title="Year produced" id="year"></li>
-            <li title="Movie length" id="length"></li>
-          </ul>
-          </div>
-
-          <!-- Genres and extras -->
-          <div class="info_elements">
-          <h3>Genre</h3>
-          <h3 id="genre"></h3>
-          <p id="extras"></p>
-          </div>
         </section>
 
         <!-- Summary section -->
