--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<header>
 		<nav class="menu">
 		<a href="index.html" id="logo-link"><img id="logo" src="./images/film.png"  alt="A logo icon of the media database showing a film roll."></a>
-		
+
 		<div id="mobile-wrapper">
 			<form action="./search.html" id="search-wrapper">
 				<input id="search-field" type="text" name="film_title" placeholder="Search here">
@@ -30,7 +30,6 @@
 			<i onclick="show_menu()" id="drop-down" class="fa fa-bars fa-2x" aria-hidden="true"></i>
 		</div>
 			<ul class="menu-list">
-				<li class="navItem"><a class="menuLink" href="./">Home</a></li>
 				<li class="navItem"><a class="menuLink" href="">Top</a></li>
 				<li class="navItem"><a class="menuLink" href="">About</a></li>
 				<li class="navItem"><a class="menuLink" href="categories.html">Categories</a></li>
@@ -43,54 +42,36 @@
 			</ul>			
 		</nav>
 	</header>
-
 	<main>
-		<!-- Recent Loans -->
-		<div class="info-header-wrap">
-			<h3 class="infoHeader">Siste lånte<span class="scroll-for-more">Scroll -></span></h3>
-		</div>
-		<div class="info-pane">
-			<div class="more-content-right" style="z-index: 10;">
-				<i class="fa fa-arrow-right" aria-hidden="true"></i>
-			</div>
-
-			<div class="more-content-left" style="z-index: 10;">
-				<i class="fa fa-arrow-left" aria-hidden="true"></i>
-			</div>
-
-			<div id="lastLoaned" class="inner-info-pane">
-				<div id="innerLastLoaned" class="inner-content"></div>
-			</div>
-		</div>
-
-		
-
 		<!-- My list element -->
-		<div class="info-header-wrap">
-			<h3 class="infoHeader">Min liste<span class="scroll-for-more">Scroll -></span></h3>
+
+		<div class="movie-container">
+			<details open>
+				<summary>Min liste</summary>
+				<div id="my-list" class="film-container"></div>
+			</details>
 		</div>
-		<div class="info-pane">
 
-			<div class="more-content-right" style="z-index: 10;">
-				<i class="fa fa-arrow-right" aria-hidden="true"></i>
-			</div>
+		<!-- Recent Loans -->
+		<div class="movie-container">
+			<details open>
+				<summary open>Siste lånte filmer</summary>
+				<div id="recent-loans" class="film-container"></div>
+			</details>
+		</div>
 
-			<div class="more-content-left" style="z-index: 10;">
-				<i class="fa fa-arrow-left" aria-hidden="true"></i>
-			</div>
-
-			<div id="myList" class="inner-info-pane">
-				<div id="innerMyList" class="inner-content" style="left:0px;right:0px;"></div>
-			</div>
+		<!-- Recommendations -->
+		<div class="movie-container">
+			<details open>
+				<summary open>Anbefalinger</summary>
+				<div id="recommendations" class="film-container"></div>
+			</details>
 		</div>
 
 
 		<!-- Routines for loans -->
-		<div class="info-header-wrap">
-			<h3 class="infoHeader">Rutiner for lån</h3>
-		</div>
 		<div id="routines">
-			<p>Rutiner</p>
+			<p>Rutiner for lån</p>
 			<ol>
 				<li>
 					Følgende kan låne: staben ved Institutt for informasjons- og medievitenskap, studenter ved instituttet, på grunnlag av faglig begrunnelse, andre ved UiB etter særlig avtale for et avgrenset tidsrom eller for et avgrenset prosjekt. 
@@ -109,9 +90,6 @@
 				</li>
 			</ol>
 		</div>
-
-
 	</main>
-
 </body>
 </html>
